# XSBench

./: CMakeLists.txt
rundir/: caliper.config  run_knl_ensemble.sh
src/: CalculateXS.c  GridInit.c  Main.c  Materials.c  XSutils.c
